packages/kit/test/apps/basics/src/routes/load/invalidation/depends-goto/+page.js
/** @type {import('./$types').PageLoad} */
export function load({ data, depends }) {
	depends('invalidate-depends-goto:shared');
	return {
		shared: new Date().getTime(),
		...data
	};
}
